syntax = "proto3";

package api.admin.v1;
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "user-api/api/user-api/v1;v1";

service Admin {
	rpc Register (RegisterReq) returns (RegisterResp) {
		option (google.api.http) = {
			post: "/api/users/v1/register",
			body: "*",
		};
	}

	rpc Login (LoginReq) returns (LoginResp) {
		option (google.api.http) = {
			post: "/api/users/v1/login",
			body: "*",
		};
	}

	rpc Captcha (google.protobuf.Empty) returns (CaptchaResp) {
		option (google.api.http) = {
			get: "/api/users/v1/captcha",
		};
	}

	rpc UserInfo (google.protobuf.Empty) returns (UserInfoResp){
		option (google.api.http) = {
			post: "/api/user-api/v1/userinfo"
			body: "*"
		};
	};

}

// 注册
message RegisterReq {
	string mobile = 1 [(validate.rules).string={pattern:"^1[3-9][0-9]{9}$"}];
	string username = 2 [(validate.rules).string = {min_len: 3, max_len: 15}];
	string password = 3 [(validate.rules).string = {min_len: 8}];
}
message RegisterResp {
	int64 id = 1;
	string mobile = 3;
	string username = 4;
	string token = 5;
	int64 expiredAt = 6;
}

//登录
message LoginReq {
	string mobile = 1 [(validate.rules).string={pattern:"^1[3-9][0-9]{9}$"}];
	string password = 2 [(validate.rules).string.min_len =  5];
	string captcha = 3 [(validate.rules).string.len=5];
	string captchaId = 4  [(validate.rules).string.min_len = 10];
}
message LoginResp {
	int64 id = 1;
	string mobile = 3;
	string username = 4;
	string token = 5;
	int64 expiredAt = 6;
}

// 用户信息
message UserInfoReq{
	int64 id =1;
}
message UserInfoResp{
	int64 id = 1;
	string mobile = 2;
	string username = 3;
	int64 gender = 5;
}

// 验证码
message CaptchaResp{
	string captchaId = 1;
	string picPath = 2;
}